# gpuses

./: .gitignore  Makefile  README.md
.github/workflows/: deploy.yml
mage/: Cargo.toml  build.rs  unseal.key
mage/src/: main.rs  server.rs
mage/src/auth/: keys.rs
mage/src/config/: Dockerfile  supported_images.json
mage/src/docker/: images.rs  invoker.rs  keys.rs  mod.rs  system.rs
mage/src/proto/: spin.proto
server/: .env  go.mod  go.sum
server/auth/v1/: auth.proto
server/cmd/: main.go
server/db/: api.go  db.go  mongo.go  profiler.go  user.go  utils.go
server/util/: config.go  mongoutils.go
website/: .gitignore  package.json  pnpm-lock.yaml
website/.github/workflows/: deploy.yml
website/src/routes/: +layout.svelte  +page.svelte  Header.svelte
